Fixed layout issues when shrinking the screen

--- a/assignments/my-beautiful-blog/style.css
+++ b/assignments/my-beautiful-blog/style.css
@@ -1,16 +1,20 @@
+.container * {
+  box-sizing: border-box;
+  max-width: 100%;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
 .container {
   /* box model */
-  background-color: lightgrey;
   padding: 20px;
-  border: 1px solid black;
-  border-radius: 10px;
   box-sizing: border-box;
   box-shadow: 2px 4px 8px black;
 
   /* grid layout */
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto auto auto auto auto;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto 0.5fr auto auto auto auto auto;
   grid-template-areas:
     "header header"
     "aboutme img-aboutme"
@@ -49,13 +53,27 @@
 
   /* box model */
   background-color: lightblue;
-  padding: 20px;
+  padding: 1.25rem;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 2px 4px 8px rgb(96, 96, 96);
 }
 .img-aboutme {
   grid-area: img-aboutme;
+  max-width: 100%;
+  height: auto;
+  display: block;
+
+  /* box model */
+  background-color: lightblue;
+  padding: 1.25rem;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 2px 4px 8px rgb(96, 96, 96);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .inspiration {
@@ -63,7 +81,7 @@
 
   /* box model */
   background-color: lightblue;
-  padding: 20px;
+  padding: 1.25rem;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 2px 4px 8px rgb(96, 96, 96);
@@ -72,7 +90,7 @@
   grid-area: hobbies;
   /* box model */
   background-color: lightblue;
-  padding: 20px;
+  padding: 1.25rem;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 2px 4px 8px rgb(96, 96, 96);
@@ -82,7 +100,7 @@
 
   /* box model */
   background-color: lightblue;
-  padding: 20px;
+  padding: 1.25rem;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 2px 4px 8px rgb(96, 96, 96);
@@ -92,7 +110,7 @@
 
   /* box model */
   background-color: lightblue;
-  padding: 20px;
+  padding: 1.25rem;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 2px 4px 8px rgb(96, 96, 96);
@@ -102,8 +120,32 @@
 
   /* box model */
   background-color: lightblue;
-  padding: 20px;
+  padding: 1.25rem;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 2px 4px 8px rgb(96, 96, 96);
+}
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "header"
+      "aboutme"
+      "img-aboutme"
+      "inspiration"
+      "hobbies"
+      "goals"
+      "aside"
+      "footer";
+  }
+}
+body {
+  margin: 0px;
+  overflow-x: hidden;
+  background-color: lightgrey;
+}
+body a:hover {
+  color: red;
 }
